[package]
name = "hide"
version = "0.1.0"
edition = "2021"
authors = ["Jens Reimann <jreimann@redhat.com>"]
license = "Apache-2.0"
description = "Hide credentials from debug output"
repository = "https://github.com/ctron/hide"
categories = []
keywords = ["credentials", "debug", "hide"]
readme = "README.md"

[dependencies]
