[package]
name = "hide"
version = "0.1.4"
edition = "2021"
authors = ["Jens Reimann <jreimann@redhat.com>"]
license = "Apache-2.0"
description = "Hide credentials from debug output"
repository = "https://github.com/ctron/hide"
categories = ["config", "development-tools", "value-formatting"]
keywords = ["credentials", "debug", "hide"]
readme = "README.md"

[dependencies]
serde = { version = "1", optional = true }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hide = { path = ".", features = ["serde"] }
