[package]
name = "hide"
version = "0.1.5"
edition = "2021"
authors = ["Jens Reimann <jreimann@redhat.com>"]
license = "Apache-2.0"
description = "Hide credentials from debug output"
repository = "https://github.com/ctron/hide"
categories = ["config", "development-tools", "value-formatting"]
keywords = ["credentials", "debug", "hide"]
readme = "README.md"

[dependencies]
schemars = { version = "0.8.20", optional = true }
serde = { version = "1", optional = true }

[dev-dependencies]
hide = { path = ".", features = ["serde"] }

schemars = { version = "0.8.20", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

